--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
     </div>
     <div class="contect">
         <h2>☎️ contact me:</h2>
-       <a href="mailto:ayhalmahy42@gmail.com"><img src="email.png"></a>
-       <a href="https://www.facebook.com/ayah.elmahi"> <img src="facebook.png"></a> 
+       <a href="mailto:ayh.dev3@gmail.com"><img src="email.png"></a>
+       <a href="https://www.facebook.com/aya.dev2010"> <img src="facebook.png"></a> 
        <a href="https://wa.me/201105308209"> <img src="whatsapp.png"></a>
-       <a href=""> <img src="instagram.png"></a>
+       <a href="https://www.instagram.com/aya.dev2010"> <img src="instagram.png"></a>
     </div>
    </body>
    </html>
