--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
        <a href="mailto:ayh.dev3@gmail.com"><img src="email.png"></a>
        <a href="https://www.facebook.com/aya.dev2010"> <img src="facebook.png"></a> 
        <a href="https://wa.me/201105308209"> <img src="whatsapp.png"></a>
-       <a href="https://www.instagram.com/aya.dev2010"> <img src="instagram.png"></a>
+       <a href="https://www.instagram.com/ayh.dev2010/"> <img src="instagram.png"></a>
     </div>
    </body>
    </html>
